--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "grunt": "~0.4.5",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-compass": "^1.1.1",
-    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^1.0.0",
-    "ngrok": "^2.2.6"
+    "grunt-ngrok": "^0.2.2"
   }
 }
