--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "deathtodivs",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-ngrok": "^0.2.2"
+    "grunt-ngrok": "^0.2.2",
+    "grunt-sass": "^2.1.0",
+    "load-grunt-tasks": "^4.0.0"
+  },
+  "dependencies": {
+    "grunt-cli": "^1.2.0"
   }
 }
